--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="10">
       <tr>
-        <td><img src="E:\UDMEY\web developement\HTML- Personal site\src images\propic.jpg" width="200" height="175" align="right" alt="tanvir's profile picture"></td>
+        <td><img src="src images\propic.jpg" width="200" height="175" align="right" alt="tanvir's profile picture"></td>
         <td><h1>Tanvir Sazib</h1>
         <p><em>B.Sc in <strong><a href="https://en.wikipedia.org/wiki/Computer_Science_and_Engineering">Computer Science Engineering</a></strong> (3rd year)</em></p>
         <p><a href="http://daffodilvarsity.edu.bd/">Daffodil International University</a></p>
